Rename to mailbin

--- a/app/views/layouts/mailbin/application.html.erb
+++ b/app/views/layouts/mailbin/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mail Drop</title>
+  <title>Mailbin</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <%= stylesheet_link_tag "mail_drop/application", "data-turbo-track": "reload" %>
-  <%= javascript_importmap_tags "application-mail_drop" %>
+  <%= stylesheet_link_tag "mailbin/application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags "application-mailbin" %>
 </head>
 <body>
   <%= yield %>
