--- a/app/views/mailbin/messages/show.html.erb
+++ b/app/views/mailbin/messages/show.html.erb
@@ -101,7 +101,7 @@
     <% end %>
 
     <dt>EML File:</dt>
-    <dd><%= MailDrop.location_for(params[:id]) %></dd>
+    <dd><%= Mailbin.location_for(params[:id]) %></dd>
   </dl>
 </header>
 
