--- a/app/views/mailbin/messages/index.html.erb
+++ b/app/views/mailbin/messages/index.html.erb
@@ -1,14 +1,30 @@
-<%= link_to "Back to app", main_app.root_path if main_app.respond_to?(:root_path) %>
-
-<h1>Sent Emails</h1>
-<%= button_to "Clear all", clear_path, method: :delete, data: {turbo_confirm: "Are you sure?"} %>
+<nav>
+  <%= link_to "Back to app", main_app.root_path if main_app.respond_to?(:root_path) %>
+  <h1>Sent Emails</h1>
+  <%= link_to "Mailbin on GitHub", "https://github.com/excid3/mailbin", target: :_blank %>
+</nav>
 
 <% if @emails.any? %>
-  <ul>
-    <% @emails.each do |email| %>
-      <li><%= link_to email.subject, message_path(email.message_id) %> - <%= l email.date, format: :long %></li>
-    <% end %>
-  </ul>
+  <table class="email-list">
+    <thead>
+      <tr>
+        <th>Subject</th>
+        <th>Sent At</th>
+        <th>
+          <%= button_to "Clear all", clear_path, method: :delete, class: "btn", data: {turbo_confirm: "Are you sure?"} %>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @emails.each do |email| %>
+        <tr>
+          <td><%= link_to email.subject, message_path(email.message_id) %></td>
+          <td><%= l email.date, format: :long %></td>
+          <td><%= button_to "Delete", message_path(email.message_id), method: :delete, data: {turbo_confirm: "Are you sure?"}, class: "btn" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% else %>
   <p>You have not sent any emails.</p>
 <% end %>
